# LumenLang

./: .gitignore  CMakeLists.txt  README.md  compile  main.cpp  main.script  test  test.script  test.sh
avr-vm/: main.c
avr-vm/include/: helpers.h  includes.h  program.h  uart.h  vm.h  vmfuncmap.h  vmnativefuncmap.h
avr-vm/src/: bin2h.cpp  helpers.cpp  uart.cpp  vm.cpp  vmfuncmap.cpp  vmnativefuncmap.cpp
examples/: fizzbuzz.script  math.script  paint.lmn  test
examples/embedded/: DS18B20.lmn  buttons.lmn
examples/pico/: blinky.lmn
include/: compiler.h  disassembler.h  examples.h  helpers.h  includes.h  programfile.h  tokenizer.h  types.h  vm.h
pico-vm/: CMakeLists.txt  compile  main.c  prog.h  program.h
pico-vm/bin2h/: bin2h.cpp
src/: compiler.cpp  compiler_math.cpp  debugvm.cpp  disassembler.cpp  helpers.cpp  main.cpp  programfile.cpp  tokenizer.cpp  vm.cpp  vmfuncmap.cpp
web/: index.html  qr.js
